--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "poly-decomp": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.34.1",
     "svg-path-commander": "^2.1.10",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
