--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "matter-js": "^0.20.0",
     "motion": "^12.5.0",
     "next": "14.2.5",
+    "pg": "^8.16.3",
     "poly-decomp": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
